add definitions and styling
co-authored-by: Ben Dunham <bendunhampdx@gmail.com>
co-authored by: Art Weinstein <artur.weinstein@gmail.com>

--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/bootstrap.css">
+  <link rel="stylesheet" href="css/styles.css">
   <script src="js/jquery-3.6.0.js"></script>
   <script src="js/scripts.js"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&display=swap" rel="stylesheet">
   <title>Programmer's flashcards</title>
 </head>
 <body>
-  
   <div class="container">
     <h1>Programming Flashcards</h1>
     <div class="row">
@@ -24,27 +26,30 @@
     <div class="col-sm-6">
       <div class="card" style="width: 18rem;">
         <div class="card-body">
-          <h5 id="card-title2">Title</h5>
-            <p id="card-text-showing2">Definition</p>
+          <h5 id="card-title2">Operators</h5>
+            <p id="card-text-showing2">operators are constructs defined within programming languages which behave generally like functions, but which differ syntactically or semantically.</p>
             <p id="card-text-hide2"></p>
         </div>
       </div>
     </div>
-
+  </div>
     <div class="row">
       <div class="col-sm-6">
         <div class="card" style="width: 18rem;">
           <div class="card-body">
-            <h5 class="card-title">Title</h5>
-              <p>Definition</p>
+            <h5 id="card-title3">Variables</h5>
+              <p id="card-text-hide3">a variable or scalar is a storage location (identified by a memory address) paired with an associated symbolic name, which contains some known or unknown quantity of information referred to as a value; or in easy terms, a variable is a container for a particular type of data (like integer, float, String and etc...)</p>
+              <p id="card-text-hide3"></p>
           </div>
         </div>
       </div> 
-    <div class="col-sm-6">
-      <div class="card" style="width: 18rem;">
-        <div class="card-body">
-          <h5 class="card-title">Title</h5>
-            <p>Definition</p>
+      <div class="col-sm-6">
+        <div class="card" style="width: 18rem;">
+          <div class="card-body">
+            <h5 id="card-title4">Functions</h5>
+              <p id="card-text-hide4">Functions are "self contained" modules of code that accomplish a specific task. Functions usually "take in" data, process it, and "return" a result. Once a function is written, it can be used over and over and over again. Functions can be "called" from the inside of other functions.</p>
+              <p id="card-text-hide4"></p>
+          </div>
         </div>
       </div>
     </div>
@@ -52,8 +57,6 @@
   
     
 
-
-
- </div>
+</div>
 </body>
 </html>
